# nnpu

./: BUILD_FIX.md  CLAUDE.md  ENTELECHY_ONTOGENESIS_SUMMARY.md  FINAL_SUMMARY.md  GGUF_IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  README.md  codex-grassmania.md  step3.md
.github/agents/: nnpu.md
docs/: README.md
docs/formal-spec/: data_model.zpp  integrations.zpp
fhp/: CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  demo-virtual-device.cpp  device-admin.cpp  ggnucash-finhwp.md  llama-coprocessor-driver.cpp  llama-coprocessor-driver.h  llama-mock.h  npu-entelechy.cpp  npu-entelechy.h  npu-ontogenesis.cpp  npu-ontogenesis.h  test-virtual-device.cpp
npu/: IMPLEMENTATION.md  NEXT_STEPS_COMPLETE.md  README.md  step1.md  step2.md
npu/cogmorph/: CMakeLists.txt  README.md  assd-driver.hpp  cogmorph.hpp  demo.cpp  grassmannian.hpp  matula-numbers.hpp  prime-basis.hpp  projections.hpp  transforms.hpp
npu/docs/: DOCUMENTATION_SUMMARY.md  architecture_overview.md
npu/docs/formal-spec/: README.md  operations.zpp  system_state.zpp
npu/fhp/: CMakeLists.txt  GGUF_INTEGRATION.md  NEXT_STEPS.md  README.md  VIRTUAL_DEVICE_README.md  financial-device-driver.cpp  financial-device-driver.h  financial-hardware-implementation.md  llama-coprocessor-driver.cpp  llama-coprocessor-driver.h  test-financial-logic.cpp  test-gguf-integration.cpp  test-next-steps.cpp  virtual-device.cpp  virtual-device.h
opencog-modern/: CMakeLists.txt  README.md
opencog-modern/benchmarks/: CMakeLists.txt  bench_main.cpp
opencog-modern/include/opencog/atomspace/: atom_table.hpp  atomspace.hpp  index.hpp
opencog-modern/include/opencog/attention/: attention_bank.hpp
opencog-modern/include/opencog/core/: memory.hpp  types.hpp
opencog-modern/include/opencog/pattern/: generator.hpp  matcher.hpp  pattern.hpp
opencog-modern/include/opencog/pln/: formulas.hpp  inference.hpp
opencog-modern/include/opencog/ure/: engine.hpp  rule.hpp
opencog-modern/src/atomspace/: atom_table.cpp  atomspace.cpp  index.cpp
opencog-modern/src/attention/: attention_bank.cpp  ecan.cpp
opencog-modern/src/core/: memory.cpp  types.cpp
opencog-modern/src/pattern/: matcher.cpp  pattern.cpp
opencog-modern/src/pln/: formulas.cpp  inference.cpp  truth_value.cpp
opencog-modern/src/ure/: engine.cpp  rule.cpp
opencog-modern/tests/: CMakeLists.txt  test_atomspace.cpp  test_attention.cpp  test_main.cpp  test_pattern.cpp  test_pln.cpp  test_types.cpp
